test/files/neg/t1845.check
t1845.scala:6: error: encountered unrecoverable cycle resolving import.
Note: this is often due in part to a class depending on a definition nested within its companion.
If applicable, you may wish to try moving some members into another object.
  import lexical._
         ^
one error found
